# BitwiseOperations

./: CMakeLists.txt  README.md  main.cpp
include/: bit_op.hpp
